<resources>

    <string name="app_name">Domotic controller</string>

    <!-- *** App data ***-->
    <string name="data_file_key">com.apps.lore_f.domoticcontroller.DATA_FILE_KEY</string>
    <string name="data_group_name">___group_name</string>

    <string name="EMPTY"></string>
    <string name="GENERIC_PLACEHOLDER_WAITING">[waiting data...]</string>

    <string name="PROGRESSSTATUS_INFO___STARTING_CONNECTION">Starting Connection...</string>
    <string name="PROGRESSSTATUS_INFO___CONNECTING_TO_XMPP_SERVER">Connecting to IM support server...</string>
    <string name="PROGRESSSTATUS_INFO___LOGGING_IN_TO_XMPP_SERVER">Connected to IM support server. Logging in...</string>
    <string name="PROGRESSSTATUS_INFO___CREATINGFILETRANSFERMANAGER">Logged in. Initializing...</string>
    <string name="PROGRESSSTATUS_INFO___HANDSHAKING">Handshaking remote host...</string>
    <string name="PROGRESSSTATUS_INFO___CONNECTED_TO_HOST">Connected to %hostname%</string>
    <string name="PROGRESSSTATUS_INFO___RETRIEVING_DIRECTORY_DATA">Retrieving remote host directory data...</string>
    <string name="PROGRESSSTATUS_INFO___DISCONNECTING_FROM_XMPP_SERVER">Disconnecting from IM support server...</string>
    <string name="PROGRESSSTATUS_INFO___RETRIEVING_TORRENT_DATA">Retrieving remote host torrent data...</string>
    <string name="PROGRESSSTATUS_INFO___NO_ACTIVE_TORRENT">No active torrent.</string>
    <string name="PROGRESSSTATUS_INFO___ACTIVE_TORRENTS">active torrents.</string>

    <!-- *** Alertdialogs ***-->
    <!-- ***   - Generic -->

    <string name="ALERTDIALOG_YES">Yes</string>
    <string name="ALERTDIALOG_NO">No</string>
    <string name="ALERTDIALOG_GOT_IT">Got it</string>
    <string name="ALERTDIALOG_MESSAGE_REBOOT">This will reboot the remote host.</string>
    <string name="ALERTDIALOG_MESSAGE_SHUTDOWN">This will shutdown the remote host.</string>
    <string name="ALERTDIALOG_MESSAGE_REPLY_TIMEOUT">The remote host did not reply. Do you want to keep waiting ?</string>
    <string name="ALERTDIALOG_TITLE_CONFIRM_TORRENT_REMOVAL">Torrent removal</string>
    <string name="ALERTDIALOG_MESSAGE_CONFIRM_TORRENT_REMOVAL">Do you really want to remove the selected torrent ?</string>
    <string name="ALERTDIALOG_MESSAGE_CONFIRM_TORRENT_REMOVAL_AND_DATA_ERASE">Do you really want to remove the selected torrent and completely erase the relevant data ?</string>
    <string name="ALERTDIALOG_MESSAGE_ADD_TORRENT">Enter the URL to add</string>
    <string name="ALERTDIALOG_MESSAGE_CONFIRM_DELETE_FROM_CLOUD">Please confirm you want to remove this file from the cloud storage.\nThis cannot be undone.</string>
    <string name="ALERTDIALOG_MESSAGE_REMOTE_DEVICE_NOT_RESPONDING">The remote device does not answer to requests.\nPlease ensure the remote device is actually on line.\n</string>
    <string name="ALERTDIALOG_MESSAGE_ZM_NOT_RESPONDING">Server did not reply.</string>
    <string name="ALERTDIALOG_TITLE_ADD_TORRENT">New torrent</string>
    <string name="ALERTDIALOG_TITLE_CONFIRM_DELETE_FROM_CLOUD">Confirm removal.</string>
    <string name="ALERTDIALOG_TITLE_REMOTE_DEVICE_NOT_RESPONDING">Remote device is off-line</string>
    <string name="ALERTDIALOG_TITLE_PERMISSION_NOT_GRANTED">Permission not granted</string>
    <string name="ALERTDIALOG_TITLE_PLEASE_WAIT">Please wait</string>
    <string name="ALERTDIALOG_MESSAGE_DEVICE_CONNECTION">Connecting to device via TCP...</string>

    <!-- ***   - Device selection -->
    <string name="DEVICE_SELECTION_ACTIONBAR_TITLE">Device selection</string>

    <!-- ***   - Group selection -->
    <string name="GROUP_SELECTION_HEADER">Let\'s select a group!</string>
    <string name="GROUP_SELECTION_EXPLANATION">Select a group to work with.\nYour usedID \'!!!username!!!\' is enabled for %d groups.</string>
    <string name="GROUP_SELECTION_EXPLANATION_NOGROUP">:(\nYour userID \'!!!username!!!\' is not associated to any group.\nAsk your group administrator to enable your usedID \'!!!username!!!\' to the desired group.</string>

    <!-- ***   - Permission requests -->
    <string name="PERMISSIONS_REQUEST_HEADER">Need some permissions...</string>
    <string name="PERMISSIONS_REQUEST_BODY">I need some permissions in order to work properly.\nYou cannot continue if the required permissions are not granted.</string>

    <string name="PERMISSION_REQUEST_RATIONALE_1">Permission request rationale 1\nnewline</string>
    <string name="PERMISSION_REQUEST_RATIONALE_2">Permission request rationale 2\nnewline</string>

    <!-- ***   - SSH Shell fragment -->
    <string name="ALERTDIALOG_TITLE_ENTER_SSH_COMMAND">SSH Shell command</string>
    <string name="ALERTDIALOG_MESSAGE_ENTER_SSH_COMMAND">Enter command:</string>

    <string name="CONNECTIONFGM_BTN_CONNECT">Connect</string>
    <string name="CONNECTIONFGM_BTN_RECONNECT">Reconnect</string>

    <string name="PROGRESSDIALOG_GOOGLESIGNIN___LOADING">Loading...</string>

    <string name="MNU_MAIN_SIGNOUT">Sign out from Google</string>
    <string name="MNU_MAIN_REVOKE">Revoke Google access</string>

    <string name="DEVICEVIEW_ACTIONBAR_TITLE">Device</string>
    <string name="DEVICEVIEW_LABEL_AVAILABLESERVICES">Available services:</string>
    <string name="DEVICEVIEW_LABEL_SYSTEM_LOAD">System load:</string>
    <string name="DEVICEVIEW_LABEL_FREE_DISK_SPACE">Free disk space:</string>
    <string name="DEVICEVIEW_LABEL_RESPONSETIME">Response time:</string>
    <string name="DEVICEVIEW_LABEL_PUBLICIPADDR">Public IP address:</string>
    <string name="DEVICEVIEW_LABEL_PRIVATEIPADDR">Local IP address:</string>
    <string name="DEVICEVIEW_LABEL_VPN_STATUS">VPN Status:</string>
    <string name="DEVICEVIEW_LABEL_VPN_STATUS_NOT_AVAILABLE">Not available.</string>
    <string name="DEVICEVIEW_LABEL_VPN_STATUS_NOT_CONNECTED">Not connected.</string>
    <string name="DEVICEVIEW_LABEL_VPN_STATUS_CONNECTED">Connected.</string>
    <string name="DEVICEVIEW_LABEL_TCP_STATUS">TCP Status:</string>
    <string name="DEVICEVIEW_LABEL_TCP_STATUS_NOT_CONNECTED">Not connected.</string>
    <string name="DEVICEVIEW_LABEL_TCP_STATUS_CONNECTED">Connected.</string>
    <string name="DEVICEVIEW_LABEL_LASTHEARTBEAT_TIME">Last heartbeat:</string>
    <string name="DEVICEVIEW_LABEL_DEVICE_OPERATIONS">Device Operations:</string>
    <string name="DEVICEVIEW_REFRESHING_DEVICE_CONNECTION">Connecting to device...</string>
    <string name="DEVICEVIEW_MENU_REBOOT">Reboot system</string>
    <string name="DEVICEVIEW_MENU_SHUTDOWN">Shutdown system</string>

    <!-- ***   - Torrents management (transmission-remote) Activity -->
    <string name="TRANSMISSIONREMOTE_LABEL_AVAILABLETORRENTS">%d available torrents.</string>
    <string name="TRANSMISSIONREMOTE_LABEL_NOTORRENTS">No available Torrent.</string>
    <string name="TRANSMISSIONREMOTE_MENU_ADD">Add Torrent</string>
    <string name="TRANSMISSIONREMOTE_MENU_REFRESH">Refresh</string>
    <string name="TRANSMISSIONREMOTE_MENU_STARTALL">Start ALL</string>
    <string name="TRANSMISSIONREMOTE_MENU_PAUSEALL">Stop ALL</string>

    <!-- ***   - CameraSelectionActivity -->
    <string name="CAMERASELECTION_LABEL_AVAILABLECAMERA">%d available camera.</string>
    <string name="CAMERASELECTION_LABEL_AVAILABLECAMERAS">%d available cameras.</string>
    <string name="CAMERASELECTION_LABEL_NOAVAILABLECAMERA">No camera available.</string>

    <!-- ***   - ThermostatActivity -->
    <string name="THERMOSTAT_LABEL_GENERIC_PLACEHOLDER">99.9 °C</string>
    <string name="THERMOSTAT_TOOLBAR_TITLE">Thermostats settings</string>

    <!-- ***   - CameraViewActivity -->
    <string name="CAMERAVIEW_LABEL_SHOTTIME">Shot taken: </string>

    <string name="CLOUDSTORAGE_LABEL_REQUESTOR">Uploaded by: </string>
    <string name="CLOUDSTORAGE_LABEL_SIZE">Size: </string>
    <string name="CLOUDSTORAGE_LABEL_NOFDOWNLOADS">N. of downloads: </string>

    <string name="VSMGM_PD_LABEL_CONNECTING">Waiting for reply...</string>
    <string name="VSMGM_PD_TITLE_CONNECTING">Connecting to VideoSurveillance</string>

    <string name="DEVICESELECTION_LABEL_RETRIEVING_DEVICES">Retrieving the list of available devices...</string>
    <string name="DEVICESELECTION_LABEL_SELECT_DEVICE">Available devices: %d. Select the device to connect to:</string>
    <string name="DEVICESELECTION_LABEL_NO_DEVICE">No device currently available.</string>

    <string name="DEVICEELEMENT_LABEL_RUNNING_SINCE">Running since: </string>
    <string name="DEVICEELEMENT_LABEL_LAST_UPDATE">Last update: </string>

    <string name="WOL_DEVICES_LABEL_SELECT_DEVICE">Select the device to wake up:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragment_videosurveillance_cameralist.xml -->
    <string name="FGM_VIDEOSURVEILLANCE_CAMERALIST_SELECT_AVAILABLE_CAMERA">Select an available camera:</string>

    <!-- *** MotionEventsManagementActivity -->
    <string name="MOTIONEVENTSMANAGEMENT_ACTIONBAR_TITLE">Motion events</string>
    <string name="MOTIONEVENTSMANAGEMENT_SELECT_EVENT">Select an event:</string>

    <string name="MOTIONEVENTSMANAGEMENT_NO_EVENT_TO_SHOW">There is no event to show.</string>
    <string name="MOTIONEVENTSMANAGEMENT_SHOWING_EVENTS">Showing %d events.</string>

    <string name="MOTIONEVENTSMANAGEMENT_HOUR">Last hour:</string>
    <string name="MOTIONEVENTSMANAGEMENT_TODAY">Today:</string>
    <string name="MOTIONEVENTSMANAGEMENT_WEEK">This week:</string>
    <string name="MOTIONEVENTSMANAGEMENT_MONTH">This month:</string>
    <string name="MOTIONEVENTSMANAGEMENT_TOTAL">Total:</string>

    <string name="MENU_MOTIONEVENT_VIEWIMAGE">Preview image</string>
    <string name="MENU_MOTIONEVENT_SHARE">Share</string>
    <string name="MENU_MOTIONEVENT_DELETE">Delete</string>
    <string name="MENU_MOTIONEVENT_PROTECT">Protect</string>

    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTER">Filter events</string>
    <string name="MENU_MOTIONEVENTSMANAGEMENT_SHOWDATA">Show events data</string>

    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTERHEADER_TIME">TIME</string>
    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTERENTRY_TIME_ANY">Any</string>
    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTERENTRY_TIME_LASTHOUR">Last hour</string>
    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTERENTRY_TIME_TODAY">Today</string>
    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTERENTRY_TIME_THISWEEK">This week</string>
    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTERENTRY_TIME_THISMONTH">This month</string>

    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTERHEADER_STATUS">STATUS</string>
    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTERENTRY_STATUS_ANY">Any</string>
    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTERENTRY_STATUS_NEW">To watch</string>
    <string name="MENU_MOTIONEVENTSMANAGEMENT_FILTERENTRY_STATUS_NOTNEW">Watched</string>


    <!-- *** Notifications Channel IDs -->
    <string name="NOTIF_CHID___MOTION_EVENTS">NOTIF_CHID___MOTION_EVENTS</string>
    <string name="NOTIF_CHID_READABLE___MOTION_EVENTS">Motion events</string>

</resources>
