<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DeviceInfoViewActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/TBR___DEVICEINFOVIEW___TOOLBAR"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/DEVICEVIEW_ACTIONBAR_TITLE"/>

    <TableLayout
        android:id="@+id/TBL___DEVICEINFOVIEW___DEVICEINFO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@+id/TBR___DEVICEINFOVIEW___TOOLBAR">

        <TableRow>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___SYSLOAD_LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DEVICEVIEW_LABEL_SYSTEM_LOAD"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___SYSLOAD_VALUE"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GENERIC_PLACEHOLDER_WAITING" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___RESPONSETIME_LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DEVICEVIEW_LABEL_RESPONSETIME"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___RESPONSETIME_VALUE"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GENERIC_PLACEHOLDER_WAITING" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___DISKSTATUS_LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DEVICEVIEW_LABEL_FREE_DISK_SPACE"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___DISKSTATUS_VALUE"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GENERIC_PLACEHOLDER_WAITING" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___PUBLICIP_LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DEVICEVIEW_LABEL_PUBLICIPADDR"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___PUBLICIP_VALUE"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GENERIC_PLACEHOLDER_WAITING"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___PRIVATEIP_LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DEVICEVIEW_LABEL_PRIVATEIPADDR"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___PRIVATEIP_VALUE"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GENERIC_PLACEHOLDER_WAITING"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___RUNNINGSINCE_LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DEVICEELEMENT_LABEL_RUNNING_SINCE"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___RUNNINGSINCE_VALUE"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GENERIC_PLACEHOLDER_WAITING"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___LASTUPDATE_LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DEVICEELEMENT_LABEL_LAST_UPDATE"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/TXV___DEVICEINFOVIEW___LASTUPDATE_VALUE"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GENERIC_PLACEHOLDER_WAITING"/>
        </TableRow>

        <TableRow>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>