<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content">


    <TextView
        android:id="@+id/TXV___STOREDFILE___NAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/GENERIC_PLACEHOLDER_WAITING"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/TXV___STOREDFILE___REQUESTOR_LABEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TXV___STOREDFILE___NAME"
        android:text="@string/CLOUDSTORAGE_LABEL_REQUESTOR" />

    <TextView
        android:id="@+id/TXV___STOREDFILE___REQUESTOR_VALUE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TXV___STOREDFILE___REQUESTOR_LABEL"
        android:layout_toEndOf="@+id/TXV___STOREDFILE___NOFDOWNLOADS_LABEL"
        android:layout_toRightOf="@+id/TXV___STOREDFILE___REQUESTOR_LABEL"
        android:text="@string/GENERIC_PLACEHOLDER_WAITING"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/TXV___STOREDFILE___SIZE_LABEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TXV___STOREDFILE___REQUESTOR_LABEL"
        android:text="@string/CLOUDSTORAGE_LABEL_SIZE" />

    <TextView
        android:id="@+id/TXV___STOREDFILE___SIZE_VALUE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TXV___STOREDFILE___SIZE_LABEL"
        android:layout_toEndOf="@+id/TXV___STOREDFILE___NOFDOWNLOADS_LABEL"
        android:layout_toRightOf="@+id/TXV___STOREDFILE___SIZE_LABEL"
        android:text="@string/GENERIC_PLACEHOLDER_WAITING"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/TXV___STOREDFILE___NOFDOWNLOADS_LABEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TXV___STOREDFILE___SIZE_LABEL"
        android:text="@string/CLOUDSTORAGE_LABEL_NOFDOWNLOADS" />

    <TextView
        android:id="@+id/TXV___STOREDFILE___NOFDOWNLOADS_VALUE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TXV___STOREDFILE___NOFDOWNLOADS_LABEL"
        android:layout_toEndOf="@+id/TXV___STOREDFILE___NOFDOWNLOADS_LABEL"
        android:layout_toRightOf="@+id/TXV___STOREDFILE___NOFDOWNLOADS_LABEL"
        android:text="@string/GENERIC_PLACEHOLDER_WAITING"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <ImageButton
        android:id="@+id/BTN___STOREDFILE___DOWNLOAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/cloud_download" />

</RelativeLayout>